fixed footer spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,3 +41,8 @@ a {
 body::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
 }
+
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
